--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,17 +5,20 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[workspace]
+members = [ "services/*" ]
 
 [workspace.dependencies]
 sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "migrate", "macros", "bigdecimal", "time" ] }
 tokio = { version = "1.33.0", features = ["rt-multi-thread", "full"] }
 dotenv = "0.15.0"
 anyhow = "1.0"
+poise = "0.6.1-rc1"
 
 [dependencies]
 sqlx = { workspace = true }
 tokio = { workspace = true }
 dotenv = { workspace = true }
-poise = "0.6.1-rc1"
+poise = { workspace = true }
 rand = "0.8.5"
 async-trait = "0.1.75"
